# qa-auto-engineer-python-project-49

./: .Makefile.swp  .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain-cal.cast  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  engine.py
brain_games/games/: calc.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brain_progression.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
