[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]


#1. Секция сборки (чтобы uv понимал, как упаковать проект):
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#2. Указание на пакеты:
[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

#3. Точка входа (Scripts).Название-команды = "пакет.папка.модуль:функция":
[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
